--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -10,7 +10,7 @@
     <input
       type="text"
       name="query"
-      placeholder="Search by UPC"
+      placeholder="Search by UPC, Product Name, Category etc..."
       value="{{ query }}"
       class="flex-1 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
     />
