Prep for Render deployment

--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,7 @@
 <section class="section py-12 bg-gray-200" id="join">
   <div class="container mx-auto text-center">
     <h2 class="text-3xl font-semibold mb-4">Join Our Mailing List</h2>
-    <p class="text-lg mb-6">Be the first to try new features, join user experiments, and help shape the future of ethical consumer organizing.</p>
+    <p class="text-lg mb-6">Be the first to try new features, add new products to our lilbrary, and help shape the future of ethical consumer organizing.</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3NYxM44s40Mr98wu1bH1nIw7nciIi_n_zpp_8WfEZREEBJw/viewform?embedded=true" width="640" height="1073" frameborder="0" marginheight="0" marginwidth="0" class="w-full"></iframe>
   </div>
 </section>
