--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,10 @@
 	    <a href="{{ url_for('home') }}" class="text-xl font-bold">SHOPIDARITY</a>
 	    <a href="{{ url_for('products') }}" class="ml-4 hover:underline">Products</a>
 	    <a href="{{ url_for('scan') }}" class="ml-4 hover:underline">Scan</a>
+	    {% if current_user.is_authenticated %}
+          <a href="{{ url_for('discover') }}" class="ml-4 hover:underline">Discover</a>
+        {% endif %}
+
 	  </div>
 
 	  <div>
