Optimizing Mobile Style

--- a/templates/dashboard/added_products.html
+++ b/templates/dashboard/added_products.html
@@ -11,7 +11,7 @@
 	        </a>
 	      </div>
 	    {% else %}
-	      <p>No added_products yet.</p>
+	      <p>You haven't added any products yet.</p>
 	    {% endfor %}
 	  </div>
 	</section>
